# PLN_QA_LLM_2025_Adicley_Adrian_Marcelo

./: README.md  main.ipynb  main.py  pyproject.toml
